# embytools

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  config.example.toml  pyproject.toml
docs/: README.md
docs/commands/: README.md  channels-numbers.md  channels-tags.md  channels.md  sessions.md  users.md
schemes/: favorites_bands.py
src/embytools/: cli.py  config.py  envelope.py  errors.py  numbering.py  output.py  session.py
src/embytools/client/: __init__.py  _resource.py  core.py  favorites.py  livetv.py  sessions.py  users.py
src/embytools/commands/: channels.py  sessions.py  users.py
src/embytools/livetv/: __init__.py  numbering.py  tagging.py
tests/: conftest.py  fakes.py  test_channel_numbers.py  test_channel_tags.py  test_channels.py  test_cli.py  test_client.py  test_config.py  test_envelope.py  test_numbering.py  test_sessions.py  test_tagging.py
