[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[project]
name = "embytools"
version = "0.1.0"
description = "Personal tools for managing my Emby server"
requires-python = ">=3.11"
dependencies = ["httpx", "typer"]

[project.scripts]
embytools = "embytools.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
